# ChangeLog for media-gfx/sphinxcontrib-blockdiag
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Nov 2010; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.4.ebuild, sphinxcontrib-blockdiag-0.5.ebuild:
  Keyworded x86.

  28 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.5.ebuild:
  Keyworded amd64.

  10 Nov 2010; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.3.1.ebuild, sphinxcontrib-blockdiag-0.4.ebuild:
  Keyworded amd64.

  09 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.4.ebuild:
  Keyworded x86.

  05 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded x86.

  05 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.5 (29 Oct 2010)

  29 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.5.ebuild:
  Version bump [214].

*sphinxcontrib-blockdiag-0.4 (08 Oct 2010)

  08 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.4.ebuild:
  Version bump [198].

  06 Oct 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded ~x86.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

*sphinxcontrib-blockdiag-0.3.1 (06 Oct 2010)

  06 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.3.1.ebuild, +metadata.xml:
  Initial ebuild, by me.
