@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST sphinxcontrib-blockdiag-0.5.tar.gz 4769 RMD160 e8cb15bb822a307f3930d3a577e3b55c4b082d6d SHA1 7e76279fd9443a1fcbd0fea9a3813760fae4b0c9 SHA256 706cff299a8dd420fa47b991d107d0be985d8eb031e27be31f6c2b01f3886190
+DIST sphinxcontrib-blockdiag-0.6.tar.gz 5218 RMD160 8ea4333a1e9ffd1744e48e3c48d9297f19427dc6 SHA1 943b7480f0e4c5f50abc5b6266e19ff9d019df3b SHA256 8e106aef226c502de50bc403ced696b69757218645e1840f0c870a98602f49a1
 EBUILD sphinxcontrib-blockdiag-0.5.ebuild 661 RMD160 0db305195f6f4266d7382e174a08559ef2b4d314 SHA1 aa02cbea68392a98462400301433fd3f25c447cf SHA256 906ff52db8f21316e704e52f2ec15aefbb270e114159aafcc1bfbe9120ef5df2
-MISC ChangeLog 1496 RMD160 d15d89f79335d11e0e8b190780ac18859a50396e SHA1 938560f990bc552c0a3d0b2714c2cf8d2c0cfafd SHA256 f0f0f92d18b7175e3ca10436a6362f66d17e50ca014996b16a2d46d5e2f7b120
+EBUILD sphinxcontrib-blockdiag-0.6.ebuild 663 RMD160 ca79f320c71ef2e3293226bc84460f4a6681eed1 SHA1 2cedbb052df8e22b51f02e8901e79e033c980706 SHA256 4e007a41e587000d418b533e082d68417b1519ffb973153a04bb7b874307a5ea
+MISC ChangeLog 1647 RMD160 6e847b83a7d24fbb5be18af1ec95b6c3cdb2f7f3 SHA1 a6daed4e4b537a64a8deb62ca0c5a45425c837c3 SHA256 0c5979b8ee63552ff3f790e9c47caccf0fd3f79d1aeef48b12cf063dc3e7fc16
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzzfsYACgkQzJrj3cAXR0mAYgCgiAuIyhiYM0vYzoH070K/trra
-GpgAnjkICRukKTFXIv4ZL5uU9JbHMKRv
-=n7WU
+iEYEARECAAYFAkz+Yw4ACgkQzJrj3cAXR0n9EACgp18D0u7hKzZ6H0dQDn2MoX8W
+/gQAnjmL7ZPEju8ddNDeCsrIY6R5z4Rw
+=ISUt
 -----END PGP SIGNATURE-----
