@@ -43,5 +43,7 @@ REM 2011-01-30 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/pycparser-2
 REM 2011-01-30 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/pycparser-2.00 %a
 REM 2011-01-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sng-1.0.5 %a
 REM 2011-01-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sng-1.0.5 %a
+REM 2011-01-06 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sphinxcontrib-blockdiag-0.6 %a
+REM 2011-01-06 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sphinxcontrib-blockdiag-0.6 %a
 
 # vim: set sw=4 sts=4 et tw=120 fenc=utf-8 ft=remind:
